[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menus/Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/menus/theme.theme" type="Theme" id=2]

[sub_resource type="Theme" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -13.5
margin_top = -48.0
margin_right = 13.5
custom_constants/separation = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 27.0
margin_bottom = 13.0
focus_neighbour_top = NodePath("../ExitButton")
text = "start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 27.0
margin_bottom = 26.0
text = "info"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 27.0
margin_bottom = 39.0
focus_neighbour_bottom = NodePath("../StartButton")
theme = SubResource( 1 )
text = "exit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
